--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <form>
   <div class="row">
     <label for="email">Email</label>
-    <input type="email" name="email" autocomplete="off" placeholder="email@example.com">
+    <input type="email" name="email" autocomplete="off" placeholder="Enter your Email">
   </div>
   <div class="row">
     <label for="password">Password</label>
-    <input type="password" name="password">
+    <input type="password" name="password" placeholder="Enter your Password">
   </div>
   <button type="submit">Login</button>
 </form>
